force-app/main/default/objects/pi__ObjectChangeLog__c/pi__ObjectChangeLog__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>ObjectChangeLog</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectChangeLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>