force-app/main/default/objects/pi__ObjectChangeLog__c/fields/pi__ObjectEmail__c.field-meta.xml
<CustomField>
    <fullName>pi__ObjectEmail__c</fullName>
    <label>Object Email</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>