force-app/main/default/objects/pi__ObjectChangeLog__c/fields/pi__ObjectMasterRecordEmail__c.field-meta.xml
<CustomField>
    <fullName>pi__ObjectMasterRecordEmail__c</fullName>
    <label>Object Master Record Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>