force-app/main/default/objects/pi__ObjectChangeLog__c/fields/pi__ObjectState__c.field-meta.xml
<CustomField>
    <fullName>pi__ObjectState__c</fullName>
    <label>Object State</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>