force-app/main/default/objects/pi__ObjectChangeLog__c/listViews/pi__All.listView-meta.xml
<ListView>
    <fullName>pi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>